modified(auth): changed firstname and lastname to username instead
