# auth-service/public/swagger.json
@@ -9,10 +9,7 @@
 		"schemas": {
 			"SignUpRequestBody": {
 				"properties": {
-					"firstname": {
-						"type": "string"
-					},
-					"lastname": {
+					"username": {
 						"type": "string"
 					},
 					"email": {
@@ -26,8 +23,7 @@
 					}
 				},
 				"required": [
-					"firstname",
-					"lastname",
+					"username",
 					"email",
 					"password",
 					"role"
@@ -47,6 +43,117 @@
 		"contact": {}
 	},
 	"paths": {
+		"/v1/auth/signup": {
+			"post": {
+				"operationId": "SignUpWithEmail",
+				"responses": {
+					"201": {
+						"description": "Created",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/SignUpRequestBody"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/v1/auth/verify": {
+			"get": {
+				"operationId": "VerifyEmail",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"token": {
+											"type": "string"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"token",
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "token",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/v1/auth/login": {
+			"get": {
+				"operationId": "LoginWithEmail",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"token": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"token"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "email",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "password",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/v1/auth/google": {
 			"get": {
 				"operationId": "InitiateGoogleLogin",
@@ -78,86 +185,21 @@
 			"get": {
 				"operationId": "GoogleAuthCallback",
 				"responses": {
-					"204": {
-						"description": "No content"
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "query",
-						"name": "code",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
-		"/v1/auth/signup": {
-			"post": {
-				"operationId": "SignUpWithEmail",
-				"responses": {
 					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/SignUpRequestBody"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/v1/auth/verify": {
-			"get": {
-				"operationId": "VerifyEmail",
-				"responses": {
-					"204": {
-						"description": "No content"
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "query",
-						"name": "token",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
-		"/v1/auth/login": {
-			"get": {
-				"operationId": "LoginWithEmail",
-				"responses": {
-					"200": {
-						"description": "Ok",
+						"description": "OK",
 						"content": {
 							"application/json": {
 								"schema": {
 									"properties": {
+										"message": {
+											"type": "string"
+										},
 										"token": {
 											"type": "string"
 										}
 									},
 									"required": [
+										"message",
 										"token"
 									],
 									"type": "object"
@@ -170,15 +212,7 @@
 				"parameters": [
 					{
 						"in": "query",
-						"name": "email",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "query",
-						"name": "password",
+						"name": "code",
 						"required": true,
 						"schema": {
 							"type": "string"
