# auth-service/src/schema/user-schema.ts
@@ -1,8 +1,7 @@
 import { z } from "zod";
 
 export const UsersignUpSchema = z.object({
-  firstname: z.string(),
-  lastname: z.string(),
+  username: z.string(),
   email: z.string().email(),
   password: z.string().min(8, "password must be least 8 charater"),
   role: z.string(),
